fix: Use npm install instead of npm ci in workflows

--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: backend
-        run: npm ci --only=production
+        run: npm install --production
 
       - name: Build application
         working-directory: backend
